<resources>
    <string name="app_name">\ Lori\ </string>
    <string name="content_description">image</string>
    <string name="label_dont_have_an_account">Don\'t have an account?</string>
    <string name="label_register"><u>Register</u></string>
    <string name="label_i_agree_to_the_terms_and_condition">I Agree To The <u>Terms &amp; Condition</u></string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="label_login"><u>Login</u></string>
    <string name="label_please_wait">Please Wait&#8230;</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_btn_login">Login</string>
    <string name="label_btn_register">Register</string>
    <string name="label_btn_submit">Submit</string>
    <string name="label_rb_male">Male</string>
    <string name="label_rb_female">Female</string>
    <string name="label_btn_save">Save</string>
    <string name="label_btn_cancel">Cancel</string>
    <string name="label_please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="label_edit">Edit</string>
    <string name="label_addresses">Addresses</string>
    <string name="label_btn_logout">Logout</string>
    <string name="label_no_products_found">No products are available!</string>
    <string name="label_delete_dialog">Are you sure you want to delete this?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_product_description">Product Description</string>
    <string name="label_product_details_stock_quantity">Stock Quantity</string>
    <string name="label_btn_add_to_cart">Add to cart</string>
    <string name="label_btn_go_to_cart">Go to cart</string>
    <string name="label_no_cart_items_found">No cart items are available!</string>
    <string name="label_subtotal">Subtotal</string>
    <string name="label_shipping_charge">Shipping Charge</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_btn_checkout">Checkout</string>
    <string name="label_out_of_stock">OUT OF STOCK</string>
    <string name="label_btn_add_address">Add Addresses</string>
    <string name="label_no_address_found">No Addresses Found!</string>
    <string name="label_btn_update">Update</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="label_home">Home</string>
    <string name="label_office">Office</string>
    <string name="label_other">Other</string>
    <string name="label_delete_addresses_dialog">Are you sure you want to delete the address?</string>
    <string name="label_checkout_product_items">Product Items</string>
    <string name="label_checkout_selected_address">Selected Address</string>
    <string name="label_checkout_items_receipt">Items Receipt</string>
    <string name="label_payment_mode">Payment Mode</string>
    <string name="label_cash_on_delivery">Cash On Delivery</string>
    <string name="label_btn_place_order">Place Order</string>
    <string name="label_no_orders_placed_yet">No orders placed yet!</string>
    <string name="label_order_details">Order Details</string>
    <string name="label_order_details_id">Order ID</string>
    <string name="label_order_details_date">Order Date</string>
    <string name="label_order_details_status">Order Status</string>
    <string name="label_order_details_shipping_address">Shipping Address</string>
    <string name="label_order_status_pending">Pending</string>
    <string name="label_order_status_in_process">In Process</string>
    <string name="label_order_status_delivered">Delivered</string>
    <string name="label_order_status_received">Received</string>
    <string name="label_no_favorite_products_found">No favorite products are available!</string>
    <string name="label_btn_add_comments">Add comments</string>
    <string name="label_btn_list_comments">List comments</string>
    <string name="label_no_comments_found">No comments are available!</string>
    <string name="label_no_sold_products_found">No products sold yet!</string>
    <string name="label_btn_i_have_received_this_order">I have received this order</string>
    <string name="title_login">LOGIN</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="title_profile">PROFILE</string>
    <string name="subtitle_forgot_password">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="title_activity_dashboard">DASHBOARD ACTIVITY</string>
    <string name="title_dashboard">DASHBOARD</string>
    <string name="title_products">PRODUCTS</string>
    <string name="title_orders">ORDERS</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_create_an_account">CREATE AN ACCOUNT</string>
    <string name="title_add_products">ADD PRODUCTS</string>
    <string name="title_delete_dialog">DELETE</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="title_my_cart">MY CART</string>
    <string name="title_address_list">ADDRESSES</string>
    <string name="title_add_address">ADD ADDRESSES</string>
    <string name="title_edit_address">EDIT ADDRESSES</string>
    <string name="title_select_address">SELECT ADDRESS</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="title_edit_product">EDIT PRODUCT</string>
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="title_my_fav_products">MY FAVORITE</string>
    <string name="title_add_comments">ADD COMMENTS</string>
    <string name="title_update_comments">UPDATE COMMENTS</string>
    <string name="title_list_comments">ALL COMMENTS</string>
    <string name="title_terms_and_condition">TERMS AND CONDITION</string>
    <string name="title_sold_products">SOLD</string>
    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_products">Add Products</string>
    <string name="action_cart">My Cart</string>
    <string name="action_fav_products">Favorite products</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_product_title">Product Title</string>
    <string name="hint_product_price">Product Price (VND)</string>
    <string name="hint_product_description">Product Description</string>
    <string name="hint_product_quantity">Product Quantity</string>
    <string name="hint_comment_content">Comment …</string>
    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number</string>
    <string name="err_msg_read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings</string>
    <string name="err_msg_select_product_image">Please select product image</string>
    <string name="err_msg_enter_product_title">Please enter product title</string>
    <string name="err_msg_enter_product_price">Please enter product price</string>
    <string name="err_msg_enter_product_description">Please enter product description</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity</string>
    <string name="err_msg_available_stock">Available stock is %1$s. You can not add more than stock quantity</string>
    <string name="err_msg_please_enter_full_name">Please enter full name</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number</string>
    <string name="err_msg_please_enter_address">Please enter address</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code</string>
    <string name="err_msg_please_enter_other_details">Please enter other details</string>
    <string name="success_to_send_email">Email sent successfully to reset your password!</string>
    <string name="success_to_update_profile">Your profile is updated successfully</string>
    <string name="success_to_register">Register successfully</string>
    <string name="success_to_login">Login successfully</string>
    <string name="success_to_upload_image">Upload the image successfully</string>
    <string name="success_to_add_products">Your product is uploaded successfully</string>
    <string name="success_to_delete_products">Your product is deleted successfully</string>
    <string name="success_to_add_products_to_cart">Product is added to your cart</string>
    <string name="success_to_delete_cart_items">Your cart item is deleted successfully</string>
    <string name="success_to_add_address">Your address is added successfully</string>
    <string name="success_to_add_comment">Your comment is added successfully</string>
    <string name="success_to_update_comment">Your comment is updated successfully</string>
    <string name="success_to_update_address">Your address is updated successfully</string>
    <string name="success_to_delete_address">Your address is deleted successfully</string>
    <string name="success_to_update_products">Your product is updated successfully</string>
    <string name="success_to_delete_orders">Your order is deleted successfully</string>
    <string name="success_to_add_fav_product">Add to favorite successfully</string>
    <string name="success_to_place_orders">Your order placed successfully</string>
    <string name="fail_to_register">Fail to register</string>
    <string name="fail_to_select_image">Fail to select the image</string>
    <string name="fail_to_login">Fail to log in</string>
    <string name="fail_to_update_profile">Fail to update the profile</string>
    <string name="fail_to_upload_image">Fail to upload the image</string>
    <string name="fail_to_get_user_details">Fail to get your details</string>
    <string name="fail_to_add_products">Fail to add products</string>
    <string name="fail_to_delete_products">Fail to delete products</string>
    <string name="fail_to_get_product_details">Fail to get product details</string>
    <string name="fail_to_add_products_to_cart">Fail to add products to cart</string>
    <string name="fail_to_check_existing_cart_items">Fail to check existing cart_items</string>
    <string name="fail_to_delete_cart_items">Fail to delete cart items</string>
    <string name="fail_to_delete_comment">Fail to delete comments</string>
    <string name="fail_to_delete_fav_products">Fail to delete favorite products</string>
    <string name="fail_to_add_addresses">Fail to add addresses</string>
    <string name="fail_to_add_comment">Fail to add comments</string>
    <string name="fail_to_update_comment">Fail to update comments</string>
    <string name="fail_to_update_addresses">Fail to update addresses</string>
    <string name="fail_to_delete_addresses">Fail to delete addresses</string>
</resources>