<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:id="@+id/flHeaderImage"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/container_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/im_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/im_logo_100"
            app:tint="@color/white" />
    </FrameLayout>

    <com.example.lori.widgets.BoldMontserratTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_giant"
        android:text="@string/title_login"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flHeaderImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:hint="@string/hint_email_id"
        android:textColorHint="@color/secondary_text"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.example.lori.widgets.BoldMontserratEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_big"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_medium"
            tools:text="abc@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:hint="@string/hint_password"
        android:textColorHint="@color/secondary_text"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:passwordToggleEnabled="true">

        <com.example.lori.widgets.BoldMontserratEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/padding_big"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_medium"
            tools:text="123456" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.lori.widgets.BoldMontserratTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_big"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/padding_medium"
        android:text="@string/label_forgot_password"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <com.example.lori.widgets.BoldMontserratButton
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_big"
        android:background="@drawable/ic_button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/padding_big"
        android:text="@string/label_btn_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_big"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btLogin">

        <com.example.lori.widgets.RegularMontserratTextView
            android:id="@+id/tvDontHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/label_dont_have_an_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_medium" />

        <com.example.lori.widgets.BoldMontserratTextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/padding_medium"
            android:text="@string/label_register"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
