<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/im_splash_background"
    android:fillViewport="true"
    android:padding="@dimen/padding_medium"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.example.lori.widgets.BoldMontserratTextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_big"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_list_comments"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big" />

            <com.example.lori.widgets.BoldMontserratButton
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_big"
                android:background="@drawable/ic_button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/label_btn_cancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="@dimen/container_giant"
            android:visibility="gone" />

        <com.example.lori.widgets.RegularMontserratTextView
            android:id="@+id/tvNoCommentsFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/label_no_comments_found"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big" />
    </LinearLayout>
</ScrollView>
